# tree-sitter

./: .appveyor.yml  .clang-format  .clang_complete  .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  .taplo.toml  .travis.yml  .vimrc  .ycm_extra_conf.py  2025-02-26_VPAT2.5Rev508-Identity-Authentication.docx  A083ZAHGL1Z - Security & Compliance Information.csv  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CSUP.txt  Cargo.toml  Dockerfile  FUNDING.json  IsabelSchoeps  Japottatweet  KCONTRIBUTING.md  LICENSE  Makefile  Numberone17  Owner  PERFORMANCE_OPTIMIZATIONS.md  Package.swift  PidVid_List  README.md  Repairman_Running.md  SECURITY.E_8  SECURITY.md  SEGURIDAD.md  Tanishgu Jsson CG.  Wedge.ocx  WedgeReadMe.doc  (+48 more)
cli/: Cargo.toml  README.md  build.rs  dynamic-symbols-darwin.txt  dynamic-symbols.txt  emscripten-version
cli/benches/: benchmark.rs  crit-benchmark.rs
cli/config/: Cargo.toml  README.md
cli/config/src/: lib.rs
cli/eslint/: package-lock.json  package.json
cli/generate/: Cargo.toml  README.md  build.rs
cli/generate/src/: dedup.rs  dsl.js  grammar-schema.json  grammars.rs  lib.rs  nfa.rs  node_types.rs  parse_grammar.rs  render.rs  rules.rs  tables.rs
cli/include/: module.modulemap  tree_sitter_cli.h
cli/loader/: Cargo.toml  README.md  build.rs  emscripten-version
cli/loader/src/: lib.rs
cli/npm/: .gitignore  cli.js  dsl.d.ts  global.d.ts  install.js  package-lock.json  package.json
cli/src/: allocations_stubs.rs  config.rs  error.rs  fuzz.rs  generate.rs  grammars.rs  highlight.rs  init.rs  input.rs  lib.rs  loader.rs  logger.rs  main.rs  nfa.rs  parse.rs  playground.html  playground.rs  print.rs  properties.rs  query.rs  query_testing.rs  rules.rs  tables.rs  tags.rs  test.rs  test_highlight.rs  test_result.rs  test_tags.rs  util.rs  version.rs  wasm.rs  web_ui.html  web_ui.rs
cli/src/build_tables/: build_lex_table.rs  build_parse_table.rs  coincident_tokens.rs  item.rs  item_set_builder.rs  minimize_parse_table.rs  mod.rs  token_conflicts.rs
cli/src/fuzz/: allocations.rs  edits.rs  mod.rs  random.rs  scope_sequence.rs
cli/src/generate/: binding_files.rs  char_tree.rs  dedup.rs  dsl.js  grammar-schema.json  grammar_files.rs  grammars.rs  mod.rs  nfa.rs  node_types.rs  npm_files.rs  parse_grammar.rs  properties.rs  render.rs  render_buffer.rs  render_context.rs  render_target.rs  render_target_c.rs  render_target_swift.rs  rules.rs  tables.rs
cli/src/prepare_grammar/: expand_repeats.rs  extract_simple_aliases.rs  flatten_grammar.rs  intern_symbols.rs  mod.rs
cli/src/query/: assert.rs
cli/src/render/: mod.rs
cli/src/templates/: .editorconfig  PARSER_NAME.pc.in  __init__.py  _cargo.toml  binding.gyp  binding_test.go  build.rs  build.zig  build.zig.zon  cmakelists.cmake  cmakelists.txt  (+17 more)
core/: Cargo.toml  cbindgen.toml
core/src/: alpha.data  api.rs  capi.rs  get_changed_ranges.rs  language.rs  lexer.rs  lib.rs  node.rs  parser.rs  query.rs  reusable_node.rs  stack.rs  subtree.rs  tree.rs  tree_cursor.rs  util.rs
crates/cli/: Cargo.toml  README.md  build.rs  flake.nix  package.nix
crates/config/: Cargo.toml  README.md
crates/generate/: Cargo.toml  README.md  build.rs
crates/highlight/: Cargo.toml  README.md
crates/init/: Cargo.toml
crates/language/: Cargo.toml  README.md  build.rs
crates/loader/: Cargo.toml  README.md  build.rs  emscripten-version  wasi-sdk-version
crates/tags/: Cargo.toml
crates/xtask/: Cargo.toml
highlight/: CMakeLists.txt  Cargo.toml  README.md
highlight/include/: CMakeLists.txt
highlight/src/: c_lib.rs  cow.rs  escape.rs  lib.rs  util.rs
lib/: CMakeLists.txt  Cargo.toml  README.md  Tree sitter go  build.rs  compile_flags.txt  flake.nix  meson.build  package.nix  tree-sitter.pc.in
lib/binding/: bindings.rs  lib.rs
lib/binding_rust/: README.m  README.md  allocations.rs  bindings.rs  build.rs  ffi.rs  lib.rs  meson.build  util.rs  wasm_language.rs
lib/binding_web/: .eslintrc.js  .gitattributes  .gitignore  .npmignore  .prettierrc.js  CONTRIBUTING.md  README.md  Sriaera Elijhrm C. Dvniaresgncre  binding.c  binding.js  check-artifacts-fresh.js  eslint.config.mjs  exports.json  exports.txt  flake.nix  imports.js  meson.build  package-lock.json  package.json  package.nix  prefix.js  prepare-edge-runtime.js  rollup.config.js  suffix.js  tree-sitter-web.d.ts  tsconfig.json  vitest.config.ts  wasm-test-grammars.nix  web-tree-sitter.d.cts  web-tree-sitter.d.cts.map  web-tree-sitter.d.ts  web-tree-sitter.d.ts.map
lib/cmake/: CMakeLists.txt.in  FindWasmtime.cmake  TSParsers.cmake
lib/dtrace/: tree-sitter-probes.d
lib/include/: CMakeLists.txt  meson.build
lib/language/: Cargo.toml  language.rs
lib/lldb_pretty_printers/: table_entry.py  tree_sitter_types.py  ts_array.py  ts_tree.py
lib/src/: CMakeLists.txt  alloc.c  alloc.h  array.h  atomic.h  bits.h  clock.h  dot_graph_io.c  dot_graph_io.h  error_costs.h  get_changed_ranges.c  get_changed_ranges.h  host.h  language.c  language.h  length.h  lexer.c  lexer.h  lib.c  meson.build  node.c  parser.c  parser.h  point.h  probes.h  query.c  reduce_action.h  reusable_node.h  stack.c  stack.h  subtree.c  subtree.h  tree.c  tree.h  tree_cursor.c  tree_cursor.h  ts_assert.h  unicode.h  utf16.c  utf16.h  (+7 more)
lib/web/: binding.c  binding.js  exports.json  imports.js  package.json  prefix.js
tags/: Cargo.toml  README.md
tags/src/: c_lib.rs  lib.rs
tree-sitter-test/: .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  VERSION  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
tree-sitter-test/examples/: attributes.test  invalid.test  simple.test  suffix.test
tree-sitter-test/ftdetect/: test.vim
tree-sitter-test/ftplugin/: test.lua
tree-sitter-test/plugin/: tstest.lua
tree-sitter-test/src/: grammar.json  node-types.json  parser.c  scanner.c
xtask/: Cargo.toml
xtask/src/: benchmark.rs  build_wasm.rs  bump.rs  check_wasm_exports.rs  clippy.rs  fetch.rs  fixtures.rs  generate.rs  generate_unicode_json.rs  main.rs  test.rs  upgrade_emscripten.rs  upgrade_wasmtime.rs  version.rs
(+1597 files in other folders)
