[package]
name = "tree-sitter-core"
description = "Rust Tree-Sitter core"
version = "0.16.1"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
license = "MIT"
readme = "binding_rust/README.md"
keywords = ["incremental", "parsing"]
categories = ["api-bindings", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter"

[dependencies]
c2rust-bitfields = "0.3"
libc = { version = "0.2", optional = true }
once_cell = "1.3.1"
errno = { version = "0.2.5", optional = true }

[lib]
crate-type = ["lib", "staticlib"]
