[package]
name = "tree-sitter-highlight"
version.workspace = true
description = "Library for performing syntax highlighting with Tree-sitter"
authors = [
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Tim Clem <timothy.clem@gmail.com>",
]
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["incremental", "parsing", "syntax", "highlighting"]
categories = ["parsing", "text-editors"]

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
lazy_static.workspace = true
regex.workspace = true
thiserror.workspace = true

tree-sitter.workspace = true
